# MaxwellDendro

./: .gitmodules  CMakeLists.txt
EM3/: CMakeLists.txt
EM3/include/: HAMR.h  JTP6.h  compact_derivs.h  derivs.h  em3.h  em3Ctx.h  em3Utils.h  kim.h  kim_filter.h  parameters.h  rhs.h  rk4em3.h
EM3/par/: em3.par.json
EM3/src/: HAMR.cpp  JTP6.cpp  compact_derivs.cpp  derivs.cpp  em3.cpp  em3Ctx.cpp  em3Utils.cpp  em3_main.cpp  kim.cpp  kim_filter.cpp  parameters.cpp  rhs.cpp  rk4em3.cpp  test_cfd_profiling.cpp
libs/: CMakeLists.txt
libs/libxsmm/: CMakeLists.txt
